2003-04-11  Dan Winship  <danw@ximian.com>

	* gui/dialogs/task-page.glade: Remove the "Contacts" button and
	entry from here too. Supposed to have been part of #35926

	* gui/dialogs/task-page.c: Remove all code pertaining to the
	contacts button

	* gui/dialogs/comp-editor-util.c: 
	* gui/dialogs/comp-editor-util.h: Likewise

	* gui/dialogs/Makefile.am (IDL_GENERATED, etc): Remove
	select-names stuff, which is no longe rused.

2003-04-11  Rodrigo Moya <rodrigo@ximian.com>

	* cal-util/cal-util.h: added missing capabilities.

	* cal-client/cal-client.c (cal_client_get_one_alarm_only,
	  cal_client_get_organizer_must_attend,
	  cal_client_get_save_schedules):
	* gui/itip-utils.c (itip_organizer_is_user):
	* gui/e-calendar-table.c (e_calendar_table_on_right_click):
	* gui/dialogs/task-editor.c (set_menu_sens):
	* gui/dialogs/event-page.c (event_page_fill_widgets):
	* gui/dialogs/meeting-page.c (meeting_page_fill_widgets):
	* gui/dialogs/alarm-page.c (button_options_clicked_cb): use the macros
	defined in cal-util.h for static capabilities.

2003-04-11  JP Rosevear  <jpr@ximian.com>

	* gui/e-meeting-model.c (start_addressbook_server): load the
	default book to look for additional free/busy info in
	(init): ugly hack to make sure we get destroyed, set idle id to 0
	(process_callbacks): unref the im because we are now done with it
	(refresh_busy_periods): set idle id to 0, ref the model and handle
	e_book_get_cursor error

2003-04-11  JP Rosevear  <jpr@ximian.com>
	
	* gui/e-meeting-time-sel-item.c
	(e_meeting_time_selector_item_destroy): guard against multiple
	destroy calls

2003-04-11  JP Rosevear  <jpr@ximian.com>
	
	* cal-client/cal-client.c (cal_client_get_free_busy): only print a
	message if the exception isn't the reasonable NotFound

2003-04-11  JP Rosevear  <jpr@ximian.com>
	
	* gui/dialogs/schedule-page.c (schedule_page_finalize): unref the
	main widget since we ref it when we un-parent it

	* gui/dialogs/alarm-page.c (alarm_page_finalize): ditto
