@@ -2,3 +2,4 @@
 .pure
 Makefile
 Makefile.in
+Evolution-Addressbook-SelectNames.h
